# labsort

./: README.md  pyproject.toml
labsort/: classifier.py  cli.py  config.py  file_groups.py  indexer.py  organizer.py  scanner.py  searcher.py  utils.py
labsort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
